# epocle-edge-ml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RELEASE_SUMMARY.md  create_notebooks.py  docker-compose.yml  make.ps1  pre-commit-config.yaml  pyproject.toml  requirements.txt  tatus
.github/workflows/: ci.yml
examples/: export_onnx.py  onnx_runtime_demo.py  reptile_pytorch.py  secure_privacy_demo.py  synthetic_data.py  train_online.py
models/onnx/20250812-160042/: export_info.json
models/onnx/20250812-160100/: export_info.json
notebooks/: 01_numpy_training.ipynb  02_reptile_fewshot.ipynb
scripts/: .gitkeep  benchmark.py  run_demo.py
src/: __init__.py  dp_utils.py  ewc.py  numpy_nn.py  optimizer.py  replay_buffer.py  secure_agg.py
tests/: test_dp_utils.py  test_ewc.py  test_ewc_extended.py  test_numpy_nn.py  test_optimizer.py  test_replay.py  test_secure_agg.py
